# Raylib-3D-testing

./: CMakeLists.txt  main.cpp
include/: InitPhysics.hpp  Utils.hpp
res/: lightFrag.fs  lightFrag.vs  shadow.fs  shadow.vs
